src/main/resources/static/css/styles.css
/* ... */
.button.outline {
  color: #1d1d1d;
  background-color: #fff;
  box-shadow: inset 0 0 0 1px #495158;
}

.button.outline:hover {
  background-color: #e7ecf0;
}

.button.outline:active {
  color: #fff;
  background-color: #495158;
}

.button.light {
  box-shadow: none;
  color: #626a72;
  background-color: #f5f6f7;
}

.button.light:hover {
  color: #626a72;
  background-color: #e7ecf0;
}

.button.light:active {
  color: #33383f;
  background-color: #cbd5df;
}

.button.light.mobile-hidden {
  box-shadow: inset 0 0 0 1px #e7ecf0;
}

.button.disabled {
  box-shadow: none;
  opacity: .7;
  color: #cbd5df;
  background-color: #f5f6f7;
}

.button.disabled:active {
  transform: none;
}

.button.subscribe {
  margin-bottom: 0;
  margin-left: -24px;
  padding-left: 22px;
  padding-right: 22px;
}

.button.dark {
  background-color: #544444;
}

.button.dark:hover {
  background-color: #33383f;
}

.button.dark:active {
  background-color: #99a4af;
}

.button.white {
  color: #1d1d1d;
  background-color: #fff;
  font-weight: 500;
}

.button.white:hover {
  background-color: #e7ecf0;
}

.button.white:active {
  background-color: #cbd5df;
}

.spacer {
  height: 48px;
  background-color: #e7ecf0;
}

.spacer._64 {
  width: 64px;
  height: 64px;
  background-color: rgba(0, 0, 0, 0);
}

.spacer._32 {
  width: 32px;
  height: 32px;
  background-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
}

.spacer._24 {
  width: 24px;
  height: 24px;
  text-transform: uppercase;
  background-color: rgba(0, 0, 0, 0);
}

.spacer._48 {
  width: 48px;
  background-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
}

.spacer._128 {
  width: 128px;
  height: 128px;
  background-color: rgba(0, 0, 0, 0);
}

.spacer._80 {
  width: 80px;
  height: 80px;
  background-color: rgba(0, 0, 0, 0);
}

.spacer._96 {
  width: 96px;
  height: 96px;
  height: 96px;
  background-color: rgba(94, 178, 244, 0);
}

.spacer._32 {
  height: 32px;
  background-color: rgba(0, 0, 0, 0);
}

.spacer._16 {
  width: 16px;
  height: 16px;
  background-color: rgba(0, 0, 0, 0);
  flex: none;
}

.text-box {
  max-width: 650px;
  position: relative;
}

.text-box.center-align {
  text-align: center;
  align-self: center;
  margin-left: auto;
  margin-right: auto;
}

.text-box._550px {
  max-width: 550px;
}

.text-box._500px {
  max-width: 500px;
  margin-bottom: 0;
  padding-bottom: 10px;
}

.text-box.centered {
  margin-left: auto;
  margin-right: auto;
}

._12-columns {
  flex-flow: wrap;
  align-content: stretch;
  justify-content: center;
  align-items: center;
  margin-left: -16px;
  margin-right: -16px;
  display: flex;
}

._12-columns.flex-horizontal {
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

._12-columns.align-top {
  align-items: flex-start;
}

._12-columns.align-left {
  justify-content: flex-start;
}

.container {
  z-index: 2;
  width: 100%;
  height: 100%;
  max-width: 1980px;
  min-height: 30px;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  flex-flow: wrap;
  order: 0;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  align-content: flex-end;
  justify-content: flex-start;
  align-self: flex-start;
  align-items: flex-start;
  margin-bottom: 0;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 0;
  padding-left: 50px;
  padding-right: 100px;
  display: flex;
  position: relative;
}

.container.privacy-policy-header-container {
  background-image: url('../images/Fotos-12.png');
  background-position: 50%;
  background-size: auto;
}

.color-block {
  width: 100%;
  height: 60px;
  background-color: #1d1d1d;
  border-radius: 5px;
  margin-bottom: 10px;
  margin-left: 0;
  margin-right: 0;
}

.color-block.grey {
  background-color: #626a72;
}

.color-block.light-grey {
  background-color: #99a4af;
}

.color-block.dark-grey {
  background-color: #33383f;
}

.color-block.back-grey {
  background-color: #f5f6f7;
  border: 1px solid #e7ecf0;
}

.color-block.soft-grey {
  background-color: #cbd5df;
}

.color-block.silver {
  background-color: #e7ecf0;
}

.color-block.white {
  background-color: #fff;
  border: 1px solid #e7ecf0;
}

.color-block.soft-red {
  background-color: rgba(255, 1, 1, .15);
  border: 1px solid #e7ecf0;
}

.color-block.soft-blue {
  background-color: rgba(122, 167, 255, .32);
  border: 1px solid #e7ecf0;
}

.color-block.soft-pink {
  background-color: rgba(239, 152, 207, .25);
  border: 1px solid #e7ecf0;
}

.white {
  color: #fff;
  font-weight: 300;
}

.column-styleguide {
  width: 100%;
  height: 40px;
  background-color: #e7ecf0;
  border-radius: 2px;
  margin-bottom: 20px;
}

.column {
  min-height: 32px;
  flex-flow: column;
  flex: 0 auto;
  align-items: stretch;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
  position: relative;
}

.column.desk-10 {
  width: 83.33%;
}

.column.desk-12 {
  width: 100%;
}

.column.desk-11 {
  width: 91.66%;
}

.column.desk-6 {
  width: 50%;
}

.column.desk-5 {
  width: 41.66%;
}

.column.desk-1 {
  width: 8.33%;
  flex: 0 auto;
}

.column.desk-4 {
  width: 33.33%;
}

.column.desk-9 {
  width: 75%;
}

.column.desk-3 {
  width: 25%;
  flex: none;
}

.column.desk-2 {
  width: 16.66%;
}

.column.desk-7 {
  width: 58.3333%;
}

.column.desk-8 {
  width: 66.6667%;
}

.ds-block {
  margin-bottom: 32px;
  font-size: 18px;
}

.horizontal-line {
  width: 100%;
  height: 1px;
  background-color: #e7ecf0;
  margin-bottom: 36px;
}

.horizontal-line.design-system {
  position: relative;
  bottom: -80px;
}

.rich-text {
  color: #1d1d1d;
  text-align: left;
}

.rich-text img {
  border-radius: 5px;
}

.rich-text h4 {
  margin-top: 24px;
}

.rich-text h3 {
  color: #544444;
  margin-top: 24px;
}

.nav-content {
  flex-direction: row;
  flex: 1;
  justify-content: space-between;
  align-items: center;
  margin-left: 24px;
  display: flex;
  position: relative;
}

.nav-cta-button-container {
  align-items: center;
  display: flex;
}
/* ... */

